[project]
name = "athena-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "datasets>=3.5.0",
    "faiss-cpu>=1.10.0",
    "langchain>=0.3.24",
    "langchain-community>=0.3.22",
    "langchain-google-genai>=2.1.3",
    "matplotlib>=3.10.1",
    "pypdf>=5.4.0",
    "ragas>=0.2.15",
]
